--- a/MatthewHome/public_html/index.html
+++ b/MatthewHome/public_html/index.html
@@ -6,14 +6,14 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title> Hello World </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/Lander.css" rel="stylesheet">
     </head>
     <body>
-        <div class="top relative">
-            <h1 class="topText"> Please choose a catagory to continue </h1>
+        <div class="topText">
+            <h1> Click bellow to continue </h1>
         </div>
         <div class="row">
             <div class="column leftBackground">
